proper stretch fix

--- a/client/assets/css/game.css
+++ b/client/assets/css/game.css
@@ -3,8 +3,9 @@ body {
 }
 
     #world {
-        max-width: 1330px;
+        
         width: 100%;
+
         margin: 0 auto;
         display: block;
     }
